hour styles and flickering fixed

--- a/src/components/Hour/_Hour.scss
+++ b/src/components/Hour/_Hour.scss
@@ -14,6 +14,7 @@
             justify-content: center;
             align-items: end;
 
+            max-width: 326px;
             width: 100%;
 
             margin-top: 24px;
@@ -21,11 +22,9 @@
 }
 
 .hourContainer {
-    width: 180px;
+    width: 214px;
 
-    font-size: 40px;
-
-    margin-right: -85px;
+    font-size: 48px;
 
     :first-child {
         margin: 0;
@@ -34,7 +33,10 @@
 
     h3 {
         margin: 0;
-        font-family: "Orbitron";
+
+        font-family: "Digital Dismay";
+        font-weight: 100;
+        letter-spacing: 4px;
     }
 }
 
@@ -48,6 +50,8 @@
 
     font-size: 32px;
     font-weight: 400;
+
+    margin-left: -154px;
 
     :first-child {
         align-self: flex-start;
